--- a/DocTrack/DocTrack.csproj
+++ b/DocTrack/DocTrack.csproj
@@ -56,6 +56,18 @@
     <Compile Include="Common\OperationType.cs" />
     <Compile Include="Common\SecretLevel.cs" />
     <Compile Include="DAL\MainContext.cs" />
+    <Compile Include="FrmEditDoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEditDoc.Designer.cs">
+      <DependentUpon>FrmEditDoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEditOper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEditOper.Designer.cs">
+      <DependentUpon>FrmEditOper.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +85,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VModel\DocView.cs" />
+    <EmbeddedResource Include="FrmEditDoc.resx">
+      <DependentUpon>FrmEditDoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEditOper.resx">
+      <DependentUpon>FrmEditOper.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
