--- a/DocTrack/DocTrack.csproj
+++ b/DocTrack/DocTrack.csproj
@@ -74,13 +74,18 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201805100853045_Init.cs" />
-    <Compile Include="Migrations\201805100853045_Init.Designer.cs">
-      <DependentUpon>201805100853045_Init.cs</DependentUpon>
+    <Compile Include="Migrations\201805180239498_Init.cs" />
+    <Compile Include="Migrations\201805180239498_Init.Designer.cs">
+      <DependentUpon>201805180239498_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805180327579_Init_2.cs" />
+    <Compile Include="Migrations\201805180327579_Init_2.Designer.cs">
+      <DependentUpon>201805180327579_Init_2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\CirculationOperation.cs" />
     <Compile Include="Model\Document.cs" />
+    <Compile Include="Model\DocumentType.cs" />
     <Compile Include="Model\SubDocument.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -94,8 +99,11 @@
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201805100853045_Init.resx">
-      <DependentUpon>201805100853045_Init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201805180239498_Init.resx">
+      <DependentUpon>201805180239498_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805180327579_Init_2.resx">
+      <DependentUpon>201805180327579_Init_2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -108,6 +116,7 @@
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\DocTrack.Model.Document.datasource" />
+    <None Include="Properties\DataSources\DocTrack.Model.DocumentType.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
